k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce

spec:
  ingressClassName: nginx

  rules:

    - host: ecommerce.localtest.me

      http:

        paths:

          - path: /
            pathType: Prefix

            backend:

              service:
                name: frontend

                port:
                  number: 80
